add stubs for the rest of refactorings

--- a/refactoring.tex
+++ b/refactoring.tex
@@ -193,24 +193,75 @@ Adding \code{ConsoleInput<T>} allows us to add ability to use busy-waiting on an
 \subsection*{TODO (\gh{fcaddaa8}, \gh{8fb88595})}
 % 1. https://github.com/awave1/assessment-loan-system/commit/fcaddaa808bff70b463e9c852aa1653040a01ab8
 % 2. https://github.com/awave1/assessment-loan-system/commit/8fb88595a52dbac288d6425c3187bca65bd16a88
+% 1.What code in which files was altered. (don’t include the full class files, only the parts relevant to the refactoring).
+
+% 2.What needed to be improved? That is, what “bad code smell” was detected? Use the terminology found in Chapter 3 of the Fowler text available from the course website/D2L.
+
+% 3.What refactoring was applied? What steps did you follow? Use the terminology and mechanics outlined in the Fowler text and illustrate the process with well-chosen code fragments taken from particular versions of your system.
+
+% 4.What code in what files was the result of the refactoring.
+
+% 5.How was the code tested?
+
+% 6.Why is the code better structured after the refactoring? Does the result of the refactoring suggest or enable further refactorings?
 
 \section*{Medium changes}
 
 \subsection*{TODO (\gh{67287c0})}
 % https://github.com/awave1/assessment-loan-system/commit/67287c032e1134f22c6814f7fc4444dedbe694ff
+% 1.What code in which files was altered. (don’t include the full class files, only the parts relevant to the refactoring).
+
+% 2.What needed to be improved? That is, what “bad code smell” was detected? Use the terminology found in Chapter 3 of the Fowler text available from the course website/D2L.
+
+% 3.What refactoring was applied? What steps did you follow? Use the terminology and mechanics outlined in the Fowler text and illustrate the process with well-chosen code fragments taken from particular versions of your system.
+
+% 4.What code in what files was the result of the refactoring.
+
+% 5.How was the code tested?
+
+% 6.Why is the code better structured after the refactoring? Does the result of the refactoring suggest or enable further refactorings?
 
 \subsection*{TODO (\gh{aef6c56})}
 % https://github.com/awave1/assessment-loan-system/commit/aef6c56b44100119cbf74f7b0781316c9ec98bd0
+% 1.What code in which files was altered. (don’t include the full class files, only the parts relevant to the refactoring).
+
+% 2.What needed to be improved? That is, what “bad code smell” was detected? Use the terminology found in Chapter 3 of the Fowler text available from the course website/D2L.
+
+% 3.What refactoring was applied? What steps did you follow? Use the terminology and mechanics outlined in the Fowler text and illustrate the process with well-chosen code fragments taken from particular versions of your system.
+
+% 4.What code in what files was the result of the refactoring.
+
+% 5.How was the code tested?
+
+% 6.Why is the code better structured after the refactoring? Does the result of the refactoring suggest or enable further refactorings?
 
 \subsection*{TODO (\gh{b6b0c98}, \gh{8a898a0})}
 % https://github.com/awave1/assessment-loan-system/commit/b6b0c982f35695c9f9bb0eea222788ba911f6f26
 % https://github.com/awave1/assessment-loan-system/commit/8a898a0ca9406ffb32fb65c40485973b1f50e97a
+% 1.What code in which files was altered. (don’t include the full class files, only the parts relevant to the refactoring).
+
+% 2.What needed to be improved? That is, what “bad code smell” was detected? Use the terminology found in Chapter 3 of the Fowler text available from the course website/D2L.
+
+% 3.What refactoring was applied? What steps did you follow? Use the terminology and mechanics outlined in the Fowler text and illustrate the process with well-chosen code fragments taken from particular versions of your system.
+
+% 4.What code in what files was the result of the refactoring.
+
+% 5.How was the code tested?
+
+% 6.Why is the code better structured after the refactoring? Does the result of the refactoring suggest or enable further refactorings?
 
 \subsection*{TODO (\gh{ad3147})}
 % https://github.com/awave1/assessment-loan-system/commit/ad3147c13281bdfa24cbdba143867c95cdd55d1f
+% 1.What code in which files was altered. (don’t include the full class files, only the parts relevant to the refactoring).
 
-% \begin{lstlisting}[language=Java]
-% // TODO
-% \end{lstlisting}
+% 2.What needed to be improved? That is, what “bad code smell” was detected? Use the terminology found in Chapter 3 of the Fowler text available from the course website/D2L.
+
+% 3.What refactoring was applied? What steps did you follow? Use the terminology and mechanics outlined in the Fowler text and illustrate the process with well-chosen code fragments taken from particular versions of your system.
+
+% 4.What code in what files was the result of the refactoring.
+
+% 5.How was the code tested?
+
+% 6.Why is the code better structured after the refactoring? Does the result of the refactoring suggest or enable further refactorings?
 
 \end{document}
