--- a/refactoring.tex
+++ b/refactoring.tex
@@ -350,33 +350,53 @@ As was stated before, this code gets rid of long constructors. With \code{UserIn
 
 \section*{Medium changes}
 
-\subsection*{TODO (\gh{67287c0})}
-% https://github.com/awave1/assessment-loan-system/commit/67287c032e1134f22c6814f7fc4444dedbe694ff
+\subsection*{Replace \code{Repository<K, V>} interface with abstract class (\gh{67287c0}); Introduce \code{add} to Repository classes and \code{getExact} to UserRepository class (\gh{aef6c56})}
 % 1.What code in which files was altered. (don’t include the full class files, only the parts relevant to the refactoring).
+Initial code included \code{Repository<K, V>} as an interface, however, it didn't make sense for it to be an interface, because there was duplicated code in its child classes. Therefore, by abstracting \code{ArrayList<V> getAll()} and \code{public void add(V value)}, we can reuse this abstract class on any other repository classes, if they need to be created in the future. Another chages that were added, include introducing \code{getExact} method in the \code{UserRepository}. This allowed up to remove \code{findUser} from \code{Controller} class, which clearly did not belong there. As well as adding \code{add(V... values)}, which helped to remove multiple calls when trying to add many things to a repository.
 
 % 2.What needed to be improved? That is, what “bad code smell” was detected? Use the terminology found in Chapter 3 of the Fowler text available from the course website/D2L.
+The \code{Repository<K, V>} needed to become an abstract class to eliminate code duplication throughout \code{Repository} children.
 
 % 3.What refactoring was applied? What steps did you follow? Use the terminology and mechanics outlined in the Fowler text and illustrate the process with well-chosen code fragments taken from particular versions of your system.
+To do the refactorings, I used Pull Up Method technique as well as Move Method. As was stated before, the following methods were removed from \code{StockRepository} and \code{UserRepository} and were moved to parent \code{Repository}:
+
+\begin{lstlisting}[language=Java]
+public void add(V value) { 
+  repoContents.add(value);
+}
+
+public ArrayList<V> getAll() {
+  return repoContents;
+}
+\end{lstlisting}
+
+\noindent where \code{repoContents} is an \code{ArrayList} that contains repository values. An example of Move Method is the following snippet:
+\begin{lstlisting}[language=Java]
+public User getExact(String username, String password) {
+  return this.repoContents
+    .stream()
+    .filter(item -> item.getUsername().equals(username) && item.getPassword().equals(password))
+    .findFirst()
+    .orElse(null);
+}
+\end{lstlisting}
+
+\noindent That method allowed to remove similar method from \code{Controller} class, called \code{findUser}.
 
 % 4.What code in what files was the result of the refactoring.
+The following files were affected by the refactoring:
+\begin{itemize}
+  \item \href{https://github.com/awave1/assessment-loan-system/commit/aef6c56#diff-db219e7646e5c083f6378ffcd27e73b1}{src/main/java/com/keirnellyer/glencaldy/repository/Repository.java}
+  \item \href{https://github.com/awave1/assessment-loan-system/commit/aef6c56#diff-d5fd0798d78d7603accc044c57179943}{src/main/java/com/keirnellyer/glencaldy/repository/UserRepository.java}
+  \item \href{https://github.com/awave1/assessment-loan-system/commit/aef6c56#diff-0f417f930dba04b27baaa509b7b80bbf}{src/main/java/com/keirnellyer/glencaldy/runtime/Controller.java}
+  \item \href{https://github.com/awave1/assessment-loan-system/commit/aef6c56#diff-d00409191136d5295ea968c2d4446f20}{src/main/java/com/keirnellyer/glencaldy/runtime/Model.java}
+\end{itemize}
 
 % 5.How was the code tested?
+To test this refactoring, I created a \code{UserRepositoryTest}, where I was able to test both \code{add} and \code{getExact} methods.
 
 % 6.Why is the code better structured after the refactoring? Does the result of the refactoring suggest or enable further refactorings?
-
-\subsection*{TODO (\gh{aef6c56})}
-% https://github.com/awave1/assessment-loan-system/commit/aef6c56b44100119cbf74f7b0781316c9ec98bd0
-% 1.What code in which files was altered. (don’t include the full class files, only the parts relevant to the refactoring).
-
-% 2.What needed to be improved? That is, what “bad code smell” was detected? Use the terminology found in Chapter 3 of the Fowler text available from the course website/D2L.
-
-% 3.What refactoring was applied? What steps did you follow? Use the terminology and mechanics outlined in the Fowler text and illustrate the process with well-chosen code fragments taken from particular versions of your system.
-
-% 4.What code in what files was the result of the refactoring.
-
-% 5.How was the code tested?
-
-% 6.Why is the code better structured after the refactoring? Does the result of the refactoring suggest or enable further refactorings?
+This refactor brought better structure to the code by removing duplicates and moving methods to where they actually belong.
 
 \subsection*{TODO (\gh{b6b0c98}, \gh{8a898a0})}
 % https://github.com/awave1/assessment-loan-system/commit/b6b0c982f35695c9f9bb0eea222788ba911f6f26
